--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-    "name": "template-project",
+    "name": "messaging",
     "version": "1.0.0",
-    "description": "Empty project for starting new ones",
-    "main": ".prettierrc.js",
+    "description": "Tesk task project for message exchanging",
+    "main": "dist/main.js",
     "scripts": {
-        "build-web": "webpack",
+        "build-client": "cd client && rm -rf dist && webpack",
+        "build-server": "cd server && rm -rf dist && webpack",
         "dev-client": "webpack-dev-server --port 8081 --watch-poll --compress --host 0.0.0.0 --history-api-fallback"
     },
-    "author": "",
+    "author": "Igor Rybak",
     "license": "ISC",
     "devDependencies": {
-        "@material-ui/core": "^4.4.2",
-        "@material-ui/icons": "^4.4.1",
-        "@types/dotenv": "^6.1.1",
         "@types/react-dom": "^16.9.0",
-        "dotenv": "^8.1.0",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
-        "ts-loader": "^6.1.0",
+        "html-webpack-plugin": "^4.0.1",
+        "ts-loader": "^6.2.2",
         "tsconfig-paths-webpack-plugin": "^3.2.0",
-        "typescript": "^3.6.3",
-        "webpack": "^4.40.2",
-        "webpack-bundle-analyzer": "^3.5.0",
-        "webpack-cli": "^3.3.9",
-        "webpack-dev-server": "^3.8.1"
+        "typescript": "^3.8.3",
+        "webpack-bundle-analyzer": "^3.6.1",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@material-ui/core": "^4.9.7",
+        "@material-ui/icons": "^4.9.1",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "webpack": "^4.42.1"
+    }
 }
