--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
     "description": "Tesk task project for message exchanging",
     "main": "dist/main.js",
     "scripts": {
-        "build-client": "cd client && rm -rf dist && webpack",
-        "build-server": "cd server && rm -rf dist && webpack",
+        "build-client": "cd client && webpack",
+        "build-server": "cd server && rm -rf dist && tsc",
+        "run-server": "cd server && node dist/main",
+        "debug-server": "cd server && ts-node-dev src/main",
         "dev-client": "webpack-dev-server --port 8081 --watch-poll --compress --host 0.0.0.0 --history-api-fallback"
     },
     "author": "Igor Rybak",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^4.17.3",
+        "@types/mongoose": "^5.7.7",
         "@types/react-dom": "^16.9.0",
         "html-webpack-plugin": "^4.0.1",
         "ts-loader": "^6.2.2",
+        "ts-node-dev": "^1.0.0-pre.44",
         "tsconfig-paths-webpack-plugin": "^3.2.0",
         "typescript": "^3.8.3",
         "webpack-bundle-analyzer": "^3.6.1",
@@ -25,6 +30,7 @@
         "@material-ui/icons": "^4.9.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "mongoose": "^5.9.6",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "webpack": "^4.42.1"
