--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build-server": "cd server && rm -rf dist && tsc",
         "run-server": "cd server && node dist/main",
         "debug-server": "cd server && ts-node-dev src/main",
-        "dev-client": "webpack-dev-server --port 8081 --watch-poll --compress --host 0.0.0.0 --history-api-fallback"
+        "dev-client": "cd client && webpack-dev-server --port 8081 --watch-poll --compress --host 0.0.0.0 --history-api-fallback"
     },
     "author": "Igor Rybak",
     "license": "ISC",
