--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
         "build-server": "cd server && rm -rf dist && tsc",
         "run-server": "cd server && node dist/main",
         "debug-server": "cd server && ts-node-dev src/main",
-        "dev-client": "cd client && webpack-dev-server --port 8081 --watch-poll --compress --host 0.0.0.0 --history-api-fallback"
+        "dev-client": "cd client && webpack-dev-server --port 8081 --watch-poll --compress --host 127.0.0.1 --history-api-fallback"
     },
     "author": "Igor Rybak",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.6",
         "@types/express": "^4.17.3",
         "@types/mongoose": "^5.7.7",
         "@types/react-dom": "^16.9.0",
@@ -28,6 +29,8 @@
     "dependencies": {
         "@material-ui/core": "^4.9.7",
         "@material-ui/icons": "^4.9.1",
+        "axios": "^0.19.2",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.9.6",
