--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "author": "Igor Rybak",
     "license": "ISC",
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.3",
         "@types/mongoose": "^5.7.7",
+        "@types/morgan": "^1.9.0",
         "@types/react-dom": "^16.9.0",
         "html-webpack-plugin": "^4.0.1",
         "ts-loader": "^6.2.2",
@@ -30,10 +32,12 @@
         "@material-ui/core": "^4.9.7",
         "@material-ui/icons": "^4.9.1",
         "axios": "^0.19.2",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.9.6",
+        "morgan": "^1.10.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "webpack": "^4.42.1"
