--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
+        "@types/cookie-session": "^2.0.39",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.3",
         "@types/mongoose": "^5.7.7",
@@ -33,6 +34,7 @@
         "@material-ui/icons": "^4.9.1",
         "axios": "^0.19.2",
         "cookie-parser": "^1.4.5",
+        "cookie-session": "^1.4.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
